test/failing/badoptions2.trunnel

struct x {
  u8 foo;
}

trunnel options opaque, very_opaque;
